@@ -1080,18 +1080,15 @@ static void process_run(winx_file_info *f,ULONGLONG vcn,ULONGLONG lcn,ULONGLONG 
     block->length = length;
 
     f->disp.clusters += block->length;
-    if(block == f->disp.blockmap)
-        f->disp.fragments ++;
     
     /*
     * Sometimes files have more than one fragment, 
     * but are not fragmented yet. In case of compressed
     * files this happens quite frequently.
     */
-    if(block != f->disp.blockmap && \
+    if(block == f->disp.blockmap || \
       block->lcn != (block->prev->lcn + block->prev->length)){
         f->disp.fragments ++;
-        f->disp.flags |= WINX_FILE_DISP_FRAGMENTED;
     }
 }
 
